# lua5.3-compiler

./: CMakeLists.txt  README.md  main.cpp
lua_tests/: variable.lua
src/: lua_constants.hpp  types.hpp
src/codegen/: func_info.cpp  func_info.hpp  opcodes.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.h  token.hpp
src/parser/: ast_nodes.hpp  block.hpp  block_parser.cpp  block_parser.hpp  expression_optimize.cpp  expression_parser.cpp  lua_number.cpp  lua_number.hpp  parser.hpp  parser_nodes.hpp  statement_parser.cpp  statement_parser.hpp
